--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "backbone": "^1.1.2",
     "chai": "^2.2.0",
     "coffee-script": "^1.9.2",
+    "crafting-guide": "^1.0.2",
     "crafting-guide-common": "^1.3.0",
     "grunt": "^0.4.5",
     "grunt-mocha-test": "^0.12.7",
