Use master for both staging and production

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,6 @@ deployment:
         commands:
             - ./scripts/deploy --staging
     production:
-        branch: production
+        branch: master
         commands:
             - ./scripts/deploy --production
