--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "crafting-guide": "^1.0.2",
     "crafting-guide-common": "^1.3.0",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-compress": "^1.2.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.2.4",
