Speed up build/deployment by using symlinked image

--- a/circle.yml
+++ b/circle.yml
@@ -6,5 +6,6 @@ deployment:
     all:
         branch: master
         commands:
+            - grunt dist
             - grunt upload:prod
             - grunt upload:staging
