--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "coffee-script": "^1.9.2",
     "crafting-guide": "^3.0.0",
     "crafting-guide-common": "^1.3.0",
+    "fs-extra": "^0.30.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-compress": "^1.2.0",
