--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "backbone": "^1.1.2",
     "chai": "^2.2.0",
     "coffee-script": "^1.9.2",
-    "crafting-guide": "^3.0.0",
-    "crafting-guide-common": "^1.3.0",
+    "crafting-guide-common": "file:../crafting-guide-common",
     "fs-extra": "^0.30.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^1.0.0",
