--- a/package.json
+++ b/package.json
@@ -19,28 +19,29 @@
     "minecraft",
     "mods"
   ],
+  "license": "UNLICENSED",
   "author": "Andrew Miner",
   "bugs": {
     "url": "https://github.com/andrewminer/crafting-guide-data/issues"
   },
   "homepage": "https://github.com/andrewminer/crafting-guide-data",
   "devDependencies": {
-    "backbone": "^1.1.2",
-    "chai": "^2.2.0",
-    "coffee-script": "^1.9.2",
-    "crafting-guide-common": "file:../crafting-guide-common",
-    "fs-extra": "^0.30.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-compress": "^1.2.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-symlink": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.4",
-    "sinon": "^1.14.1",
-    "sinon-chai": "^2.7.0",
-    "underscore": "^1.8.3",
-    "when": "^3.7.2"
+    "backbone": "1.3.3",
+    "chai": "3.5.0",
+    "coffee-script": "1.12.5",
+    "crafting-guide-common": ">=3.1.0",
+    "fs-extra": "2.1.2",
+    "grunt": "1.0.1",
+    "grunt-contrib-clean": "1.1.0",
+    "grunt-contrib-compress": "1.4.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-symlink": "1.0.0",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-mocha-test": "0.13.2",
+    "mocha": "3.3.0",
+    "sinon": "2.1.0",
+    "sinon-chai": "2.9.0",
+    "underscore": "1.8.3",
+    "when": "3.7.8"
   }
 }
