--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "backbone": "1.3.3",
     "chai": "3.5.0",
     "coffee-script": "1.12.5",
-    "crafting-guide-common": ">=3.0.0 <4.0.0",
+    "crafting-guide-common": ">=5.0.0",
     "fs-extra": "2.1.2",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.1.0",
